--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,4 +3,6 @@
   <string name="title_home">Banda</string>
   <string name="title_dashboard">Canciones</string>
   <string name="title_notifications">Notificaciones</string>
+  <string name="text_notifications">Verifica en nuestras redes novedades sobre nuestras actividades</string>
+  <string name="band_text_info">fkjsdlfkjsldkfjlkdsjflksdjflksdjflkjsdlfkjlsdkjflksdjflkjslkdfjlsdfsdfsfdsfsdfsdfsdfdsfdsfsdffdsfsdfsdfdsfdsfdsfsdfsdfsdfsdfdsfsdfsf</string>
 </resources>
