--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
   <string name="title_home">Band</string>
   <string name="title_dashboard">Songs</string>
   <string name="title_notifications">Notifications</string>
+  <string name="text_notifications">Verifica en nuestras redes novedades sobre nuestras actividades</string>
+  <string name="band_text_info">fkjsdlfkjsldkfjlkdsjflksdjflksdjflkjsdlfkjlsdkjflksdjflkjslkdfjlsdfsdfsfdsfsdfsdfsdfdsfdsfsdffdsfsdfsdfdsfdsfdsfsdfsdfsdfsdfdsfsdfsf</string>
 </resources>
