--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,38 @@
   <string name="title_notifications">Notifications</string>
   <string name="text_notifications">Verifica en nuestras redes novedades sobre nuestras actividades</string>
   <string name="band_text_info">fkjsdlfkjsldkfjlkdsjflksdjflksdjflkjsdlfkjlsdkjflksdjflkjslkdfjlsdfsdfsfdsfsdfsdfsdfdsfdsfsdffdsfsdfsdfdsfdsfdsfsdfsdfsdfsdfdsfsdfsf</string>
+  <string name="track_cicatrices">Es lo que dices,
+lo que significan,
+camino entre vosotros
+pero no soy
+uno de ustedes.
+Es tu forma de explicar
+lo inexplicable,
+es tu forma de ser
+inculta.
+
+Me pediste un tiempo.
+Voy a seguir esperandote.
+Y aunque una vez lo pensé,
+solo no voy a quedarme.
+Porque tengo mi guitarra
+y mi voz
+Y por supuesto las palabras
+del señor John.
+
+El valor
+no es la ausencia del miedo,
+pero la sangre azul
+llena de cicatrices:
+Es un concepto vago de lo que hiciste.
+Tengo una bala en el cargador y voy a disparar hacia delante.
+
+Es tu forma de explicar
+lo inexplicable,
+es tu forma de ser
+inculta:
+Carente de experiencia
+e ilusa.
+Enfrento a la muerte y soy quien propicia mi suerte.</string>
+
 </resources>
