--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
   <string name="title_notifications">Notifications</string>
 
   <string name="title_disks">Disks</string>
-  <string name="stars">Stars</string>
+  <string name="title_stars">Stars</string>
 
   <string name="text_notifications">Check out our social networks news about us!</string>
 
@@ -91,5 +91,9 @@ Enfrento a la muerte
 Y soy quien propicia mi suerte.</item>
   </string-array>
   <string name="title_activity_disks">DisksActivity</string>
+  <string name="app_typeface">title.ttf</string>
+  <string name="cd_room_typeface">card_name.ttf</string>
+  <string name="EXTRA_DISK_TITLE">DISK_TITLE</string>
+  <string name="EXTRA_DEFAULT">no title</string>
 
 </resources>
