add circular reveal and fixes for lower apis versions

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,6 +5,7 @@
   <string name="title_notifications">Notificaciones</string>
 
   <string name="text_notifications">Verifica en nuestras redes novedades sobre nuestras actividades</string>
+  <string name="band_text_info">Somos \'Sin Sueños\' porque cuando se formo la banda se cumplio el nuestro.</string>
 
   <string name="disclamer">©2018. Reservados todos los derechos de los autores y compositores, del productor fonográfico, del editor, y de los intérpretes de las obras reproducidas en este ejemplar. Prohibida la reproducción, regrabación, alquiler, préstamo, canje, ejecución pública, y difusión por cualquier medio y procedimiento sin previa autorización o cualquier otro uso no autorizado. SADAIC - BIEM / AADI - CAPIF. Industria Argentina. Disco es Cultura.</string>
 
