--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,33 +69,44 @@
   </string-array>
 
   <string-array name="track_lyrics">
-    <item>Es lo que dices, lo que significa
-Camino entre vosotros, pero no soy uno de ustedes
-Es tu forma de explicar, lo inexplicable
-Es tu forma de ser inculta.
-
-Me pediste un tiempo, voy a seguir esperándote
-Y aunque alguna vez lo pensé, solo no voy a quedarme
-Porque tengo mi guitarra, y mi voz
-Y por supuesto las palabras, del señor Young.
-
-El valor, no es la ausencia del miedo
-Tengo la sangre azul, llena de cicatrices
-Es un concepto vago, de lo que hiciste
-Tengo una bala en el cargador, y voy a disparar hacia delante
-
-Es tu forma de explicar lo inexplicable
-Es tu forma de ser inculta
-Carente de experiencia e ilusa
-Enfrento a la muerte
+    <item>Es lo que dices, lo que significa\n
+Camino entre vosotros, pero no soy uno de ustedes\n
+Es tu forma de explicar, lo inexplicable\n
+Es tu forma de ser inculta.\n
+\n
+Me pediste un tiempo, voy a seguir esperándote\n
+Y aunque alguna vez lo pensé, solo no voy a quedarme\n
+Porque tengo mi guitarra, y mi voz\n
+Y por supuesto las palabras, del señor Young.\n
+\n
+El valor, no es la ausencia del miedo\n
+Tengo la sangre azul, llena de cicatrices\n
+Es un concepto vago, de lo que hiciste\n
+Tengo una bala en el cargador, y voy a disparar hacia delante\n
+\n
+Es tu forma de explicar lo inexplicable\n
+Es tu forma de ser inculta\n
+Carente de experiencia e ilusa\n
+Enfrento a la muerte\n
 Y soy quien propicia mi suerte.</item>
   </string-array>
   <string name="title_activity_disks">DisksActivity</string>
+  <string name="title_activity_lyrics">LyricsActivity</string>
   <string name="app_typeface">title.ttf</string>
   <string name="cd_room_typeface">card_name.ttf</string>
+  <string name="track_typeface">times.ttf</string>
+  <string name="lyric_typeface">poems.ttf</string>
   <string name="EXTRA_DISK_TITLE">DISK_TITLE</string>
+  <string name="EXTRA_TRACK_TITLE">TRACK_TITLE</string>
+  <string name="EXTRA_TRACK_LYRIC">TRACK_LYRIC</string>
+  <string name="EXTRA_TRACK_RESOURCE_MUSIC_IN_RAW">TRACK_RESOURCE_MUSIC_IN_RAW</string>
   <string name="EXTRA_DISK_ID">DISK_ID</string>
+  <string name="EXTRA_CIRCULAR_REVEAL_X">CIRCULAR_REVEAL_X</string>
+  <string name="EXTRA_CIRCULAR_REVEAL_Y">CIRCULAR_REVEAL_Y</string>
   <string name="EXTRA_DEFAULT">no title</string>
+  <!--from disk list to disk details -->
   <string name="transition_disk_name_title">transition_disk_name_title</string>
+  <!--from track list to track details -->
+  <string name="transition_track_name_title">transition_track_name_title</string>
 
 </resources>
